my special.my special.my special.my special.my special.my special.my special.

--- a/res/layout/game.xml
+++ b/res/layout/game.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout android:id="@+id/layout_1"
-    android:background="@color/zr_white"
     android:orientation="vertical"
     android:layout_width="fill_parent" android:layout_height="fill_parent"
+    android:background="@drawable/game_background"
     xmlns:android="http://schemas.android.com/apk/res/android">
   <TextView android:id="@+id/text_1"
       style="@style/StyleBarTitle"
@@ -11,7 +11,6 @@
       />
   <LinearLayout android:id="@+id/layout_text"
       android:visibility="invisible"
-      android:background="@color/zr_white"
       android:gravity="center"
       android:orientation="horizontal"
       android:layout_width="fill_parent" android:layout_height="wrap_content"
@@ -31,14 +30,13 @@
         android:layout_marginLeft="20dp"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="21"
+        android:text=""
         android:textSize="25sp"
         android:textColor="@color/zr_green"
         android:textStyle="bold"
         />
   </LinearLayout>
   <LinearLayout android:id="@+id/layout_image"
-      android:background="@color/zr_white"
       android:gravity="center"
       android:orientation="horizontal"
       android:layout_width="fill_parent" android:layout_height="wrap_content"
@@ -95,7 +93,6 @@
       android:visibility="invisible"
       />
   <LinearLayout android:id="@+id/layout_btn"
-      android:background="@color/zr_white"
       android:layout_marginTop="30dp"
       android:gravity="center"
       android:orientation="vertical"
@@ -107,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:background="@drawable/btn_selector"
-        android:text="继续拍码?"
+        android:text="开始游戏"
         android:textColor="@color/zr_black"
         android:textSize="18sp"
         android:textStyle="bold"
