--- a/res/layout/aipai_main.xml
+++ b/res/layout/aipai_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="@drawable/game_background"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
   <TextView android:id="@+id/mMain"
@@ -15,7 +16,6 @@
       android:orientation="vertical"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
-      android:background="@drawable/main_backgroud"
       >
     <include
         android:layout_gravity="center|center_horizontal|center_vertical"
@@ -25,8 +25,6 @@
   <View
       android:layout_height="fill_parent"
       android:layout_width="fill_parent"
-      android:background="@drawable/main_backgroud"
-
       />
 
 </LinearLayout>
