--- a/res/layout/pay.xml
+++ b/res/layout/pay.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout android:id="@+id/layout_pay"
-    android:background="@color/zr_white"
     android:orientation="vertical"
+    android:background="@drawable/game_background"
     android:layout_width="fill_parent" android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
   <TextView android:id="@+id/text_1"
@@ -10,7 +10,6 @@
       android:text="兑奖"
       />
   <LinearLayout android:id="@+id/layout_tips"
-      android:background="@color/zr_white"
       android:gravity="center"
       android:orientation="horizontal"
       android:layout_width="fill_parent" android:layout_height="wrap_content"
@@ -21,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textSize="20sp"
-        android:textColor="@color/zr_orange"
+        android:textColor="@color/zr_black"
         android:textStyle="bold"
         android:text="恭喜你获得"
         />
@@ -32,12 +31,11 @@
         android:layout_width="wrap_content"
         android:text="21"
         android:textSize="25sp"
-        android:textColor="@color/zr_green"
+        android:textColor="@color/zr_red"
         android:textStyle="bold"
         />
   </LinearLayout>
   <LinearLayout android:id="@+id/layout_edit"
-      android:background="@color/zr_white"
       android:gravity="center"
       android:orientation="horizontal"
       android:layout_width="fill_parent" android:layout_height="wrap_content"
@@ -54,7 +52,6 @@
         />
   </LinearLayout>
   <LinearLayout android:id="@+id/layout_btn"
-      android:background="@color/zr_white"
       android:layout_marginTop="30dp"
       android:gravity="center"
       android:orientation="vertical"
