--- a/res/layout/rule.xml
+++ b/res/layout/rule.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout android:id="@+id/layout_1"
-    android:background="@color/zr_white"
     android:orientation="vertical"
+    android:background="@drawable/game_background"
     android:layout_width="fill_parent" android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
   <TextView android:id="@+id/text_1"
@@ -17,7 +17,6 @@
       android:scrollbars="vertical"
       >
     <LinearLayout android:id="@+id/layout_text"
-        android:background="@color/zr_white"
         android:gravity="center"
         android:orientation="vertical"
         android:layout_width="fill_parent" android:layout_height="wrap_content"
@@ -27,8 +26,8 @@
           android:id="@+id/game_explain"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
-          android:textSize="20sp"
-          android:textColor="@color/zr_orange"
+          android:textSize="17sp"
+          android:textColor="@color/zr_black"
           android:textStyle="bold"
           android:text="@string/game_explain"
           />
@@ -37,8 +36,8 @@
           android:id="@+id/game_rule"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
-          android:textSize="20sp"
-          android:textColor="@color/zr_orange"
+          android:textSize="17sp"
+          android:textColor="@color/zr_black"
           android:textStyle="bold"
           android:text="@string/game_rule"
           />
