--- a/res/menu/mainmenu.xml
+++ b/res/menu/mainmenu.xml
@@ -6,6 +6,6 @@
   <item android:id="@+id/menu_item_photo" android:title="拍照" android:icon="@drawable/photo_icon"/>
   <item android:id="@+id/menu_item_aboutus" android:title="关于我们"
       android:icon="@drawable/aboutus_icon"/>
-  <item android:id="@+id/menu_item_help" android:title="帮助"/>
+  <item android:id="@+id/menu_item_help" android:icon="@drawable/setting_icon" android:title="设置"/>
 
 </menu>
